# tesseract-gui

./: BUILD  CMakeLists.txt  ChildWidget.cpp  ChildWidget.h  LICENSE  MainWindow.cpp  MainWindow.h  main.cpp
src/: CMakeLists.txt  ChildWidget.h  MainWindow.h  application.qrc  main.cpp
test/: 10.box  10.tif  154.tif  155.tif  160.tif  161.tif  25-1.box  25-1.tif  25-2.box  25-2.tif  7.box  7.tif  9.box  9.tif
